[tool.poetry]
name = "animage"
version = "0.1.0"
description = "Image transformer as a service"
authors = ["Stéphane B. <stillfury@hotmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
opencv-python = "^4.2.0"
flask_cors = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
python-dotenv = "^0.13.0"
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
